<resources>
    <string name="app_name">Peredacha Paketov Andrey Gritsakovich gr 493</string>
    <string name="ip_adress">IP Адрес:</string>
    <string name="port">Порт:</string>
    <string name="message">Сообщение:</string>
    <string name="send">Отправить</string>
    <string name="time">Время</string>
    <string name="clear">Очистить</string>
    <string name="closeOption">Закрыть найстройки</string>
</resources>