<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ly_button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/button_option"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:onClick="Visible_OnClick"
            android:text="@string/closeOption"
            app:rippleColor="#E91E63" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_text_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_ip"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ip_adress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="10.132.23.43" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_text_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/port"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txt.port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="9000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_who"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <LinearLayout
        android:id="@+id/ly_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_message"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/message"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_buttons"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_send"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Onclick"
            android:text="@string/send"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/zagolovok_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tx_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ip_adress"
            android:textAlignment="viewStart"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tx_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_buttonClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_clear_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Clear_OnClick"
            android:text="@string/clear" />
    </LinearLayout>

</LinearLayout>